--- a/login/webapps/am/WEB-INF/web.xml
+++ b/login/webapps/am/WEB-INF/web.xml
@@ -175,7 +175,7 @@
             <param-value>/policyEditor/,/policyEditor/index.html,/scripts/,/scripts/index.html,/XUI/,/XUI/index.html</param-value>
         </init-param>
     </filter>
-    <!-- To configure CORS Support, please see the documentation and use the following lines as a template.
+    <!-- To configure CORS Support, please see the documentation and use the following lines as a template. -->
     <filter>
         <filter-name>CORSFilter</filter-name>
         <filter-class>org.forgerock.openam.cors.CORSFilter</filter-class>
@@ -185,7 +185,7 @@
                 A comma separated list of HTTP methods for which to accept CORS requests.
             </description>
             <param-name>methods</param-name>
-            <param-value>POST,PUT</param-value>
+            <param-value>GET,POST,HEAD,OPTIONS,PUT,DELETE</param-value>
         </init-param>
         <init-param>
             <description>
@@ -193,7 +193,7 @@
                 A comma separated list of origins from which to accept CORS requests.
             </description>
             <param-name>origins</param-name>
-            <param-value>http://www.example.net,https://example.org:8433</param-value>
+            <param-value>http://login.example.com:18080,http://app.test:8080</param-value>
         </init-param>
         <init-param>
             <description>
@@ -202,7 +202,7 @@
                 Default: false
             </description>
             <param-name>allowCredentials</param-name>
-            <param-value>false</param-value>
+            <param-value>true</param-value>
         </init-param>
         <init-param>
             <description>
@@ -210,7 +210,7 @@
                 A comma separated list of HTTP headers which can be included in the requests.
             </description>
             <param-name>headers</param-name>
-            <param-value>headerOne,headerTwo,headerThree</param-value>
+            <param-value>authorization,Content-Type,X-Requested-With,Cache-Control,Accept-Language,accept,Origin,Access-Control-Request-Method,Access-Control-Request-Headers,X-OpenAM-Username,X-OpenAM-Password,iPlanetDirectoryPro,accept-api-version</param-value>
         </init-param>
         <init-param>
             <description>
@@ -218,7 +218,7 @@
                 The name of the host expected in the request Host header.
             </description>
             <param-name>expectedHostname</param-name>
-            <param-value>openam.example.com:8080</param-value>
+            <param-value>login.example.com:18080</param-value>
         </init-param>
         <init-param>
             <description>
@@ -226,7 +226,7 @@
                 The comma separated list of headers which the user-agent can expose to its CORS client.
             </description>
             <param-name>exposeHeaders</param-name>
-            <param-value>exposeHeaderOne,exposeHeaderTwo</param-value>
+            <param-value>Access-Control-Allow-Origin,Access-Control-Allow-Credentials,Set-Cookie</param-value>
         </init-param>
         <init-param>
             <description>
@@ -238,7 +238,6 @@
             <param-value>600</param-value>
         </init-param>
     </filter>
-    -->
     <filter>
         <filter-name>AuditContextFilter</filter-name>
         <filter-class>org.forgerock.openam.audit.context.AuditContextFilter</filter-class>
@@ -359,12 +358,14 @@
         <filter-name>CacheForAMonth</filter-name>
         <url-pattern>/XUI/*</url-pattern>
     </filter-mapping>
-    <!--
     <filter-mapping>
         <filter-name>CORSFilter</filter-name>
         <url-pattern>/json/*</url-pattern>
     </filter-mapping>
-    -->
+    <filter-mapping>
+        <filter-name>CORSFilter</filter-name>
+        <url-pattern>/oauth2/*</url-pattern>
+    </filter-mapping>
     <filter-mapping>
         <filter-name>NotificationsWebSocketFilter</filter-name>
         <url-pattern>/notifications</url-pattern>
